@@ -1,10 +1,0 @@
-Metadata-Version: 1.0
-Name: readline
-Version: 1.12
-Summary: Python implementation of GNU readline
-Home-page: UNKNOWN
-Author: Gary Bishop
-Author-email: gb@cs.unc.edu
-License: UNKNOWN
-Description: UNKNOWN
-Platform: UNKNOWN
