@@ -1,16 +1,15 @@
 # -*- coding: utf-8 -*-
 
 #*****************************************************************************
-#       Copyright (C) 2003-2006 Gary Bishop.
 #       Copyright (C) 2006  Jorgen Stenarson. <jorgen.stenarson@bostream.nu>
 #
 #  Distributed under the terms of the BSD License.  The full license is in
 #  the file COPYING, distributed as part of this software.
 #*****************************************************************************
 
-from distutils.core import setup
-
+from setuptools import setup,find_packages
 execfile('pyreadline/release.py')
+
 setup(name=name,
       version          = version,
       description      = description,
