@@ -1,3 +1,11 @@
+2006-01-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+
+	* Added copyright notices to all files
+	* Created release.py file to contain relesase related information
+	* Started egg_setup.py
+	* Changed setup.py to use release.py
+	*
+	
 2006-01-23  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 
 	* Default is now to insert non bound characters. 
